--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="box.js"></script>
     <script src="player.js"></script>
     <script src="user.js"></script>
+    <script src="ai.js"></script>
 
     <script src="ball.js"></script>
     
