--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="player.js"></script>
     <script src="user.js"></script>
     <script src="ai.js"></script>
+    
+    <script src= "ptp.js"></script>
 
     <script src="ball.js"></script>
     
