--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <script src="ai.js"></script>
     
     <script src= "ptp.js"></script>
-
+    <script src="movement_decision.js"></script>
+    
     <script src="ball.js"></script>
 
     <script src="main.js"></script>
