ai can set, ai can pass, ai can jump, ai can hit, and the user can kind of click two buttons @ once

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <script src="ball.js"></script>
 
+    <script src="rules.js"></script>
+
     <script src="main.js"></script>
 
     <script src="movement_decision.js"></script>
