--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <!-- Including the three.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/104/three.min.js"></script>
+
 
     <script src="box.js"></script>
     <script src="player.js"></script>
@@ -22,9 +22,23 @@
 
     <script src="rules.js"></script>
 
-    <script src="main.js"></script>
+  
 
     <script src="movement_decision.js"></script>
+    <script src="main.js"></script>
+
+    <!-- <script src="test.js"></script> -->
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
 
