--- a/controls.html
+++ b/controls.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>nea menu</title>
+    <title>nea contRols</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-
-    <p class="titular">Volleyball Game</p>
-    <br><a href="startgame.html"><p class="options">Start</p></a>
-    <br><p class="options">Controls</p>
-    <br><p class="options">Tips</p>
+    
 
 
+    <br><a href="index.html"><p class="options">BACK TO Menu</p></a>
   </body>
 </html>
 
