--- a/tips.html
+++ b/tips.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>nea menu</title>
+    <title>nea Tips</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
