--- a/controls.html
+++ b/controls.html
@@ -7,10 +7,25 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    
+    <br><br>
+    <br><p class="controls-info">W: move up</p>
+    <br><p class="controls-info">S: move down</p>
+    <br><p class="controls-info">A: move left</p>
+    <br><p class="controls-info">D: move right</p>
+    <br><p class="controls-info">SPACE: jump</p>
+    <br><p class="controls-info">Left Arrow: rotate anticlockwise</p>
+    <br><p class="controls-info">Right Arrow: rotate clockwise</p>
+
+    <br><br>
+    <br><p class="controls-info">E: hit</p>
+    <br><p class="controls-info">R: set</p>
+    <br><p class="controls-info">F: pass</p>
+    <br><p class="controls-info">T: toss</p>
+    <br><p class="controls-info">G: serve</p>
 
 
-    <br><a href="index.html"><p class="options">BACK TO Menu</p></a>
+
+    <br><a href="index.html"><p class="back">BACK TO Menu</p></a>
   </body>
 </html>
 
