--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   </head>
   <body>
 
+    <br><br><br><br><br>
     <p class="titular">Volleyball Game</p>
+    <p class="sub-titular">by Alex Watson</p>
+    <p class="s2-titular">at Wyke College</p>
+    <p class="s3-titular">(s0037493)</p>
     <br><a href="startgame.html"><p class="options">Start</p></a>
-    <br><p class="options">Controls</p>
-    <br><p class="options">Tips</p>
+    <br><a href="controls.html"><p class="options">Controls</p></a>
+    <br><a href="tips.html"><p class="options">Tips</p></a>
 
 
   </body>
