--- a/tips.html
+++ b/tips.html
@@ -3,17 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>nea Tips</title>
+    <title>Helpful Tips & Tricks :)</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <br><br>
+      
 
-    <p class="titular">Volleyball Game</p>
-    <br><a href="startgame.html"><p class="options">Start</p></a>
-    <br><p class="options">Controls</p>
-    <br><p class="options">Tips</p>
+      <div>
+      <p class="tips-info">
+        The direction of passes means they will <em>always</em> go to your teammate
+        <br>Sets are almost the same as passing, but the direction is manual.
+        <br>This means, if you want your teammate to set from a specific place, use a <em>set</em> instead of a <em>pass</em>.
+      </p></div><br>
+      <div><p class="tips-info">If you are close enough to your teammate when they set, they will set you a <em>quick attack</em>.</p></div><br>
+      <div><p class="tips-info">A <em>jump serve</em> will have more power than a normal serve</p></div><br>
+      <div><p class="tips-info">You can jump and hit to <em>block</em> your opponent, but it will be less powerful than a normal hit</p></div><br>
 
+    
 
+    <br><a href="index.html"><p class="back">BACK TO Menu</p></a>
   </body>
 </html>
 
