--- a/startgame.html
+++ b/startgame.html
@@ -21,9 +21,9 @@
     <script src="rules.js"></script>
 
     <script src="movement_decision.js"></script>
-    <script src="main.js"></script>
+    <script id="game-screen" src="main.js"></script>
 
-    <br><a href="index.html"><p class="options">BACK TO Menu</p></a>
+    <br><a href="index.html"><p class="back">BACK TO Menu</p></a>
 
   </body>
 </html>
