added points, penalised double touches.

--- a/tips.html
+++ b/tips.html
@@ -19,7 +19,7 @@
       <div><p class="tips-info">If you are close enough to your teammate when they set, they will set you a <em>quick attack</em>.</p></div><br>
       <div><p class="tips-info">A <em>jump serve</em> will have more power than a normal serve</p></div><br>
       <div><p class="tips-info">You can jump and hit to <em>block</em> your opponent, but it will be less powerful than a normal hit</p></div><br>
-
+      <div><p class="tips-info">To adjust the speed of the game, you change change your monitor's <em>refresh rate</em>, e.g. to 60Hz</p></div><br>
     
 
     <br><a href="index.html"><p class="back">BACK TO Menu</p></a>
