--- a/startgame.html
+++ b/startgame.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>GAME PLAY</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/104/three.min.js"></script>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>GAME PLAY</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/104/three.min.js"></script>
   
-    <script src="box.js"></script>
-    <script src="player.js"></script>
-    <script src="user.js"></script>
-    <script src="ai.js"></script>
+  <div id="wide">
+    <h1 id="score">(0) 0:0 (0)</h1>
+  </div>
 
-    <script src= "ptp.js"></script>
+  <script src="box.js"></script>
+  <script src="player.js"></script>
+  <script src="user.js"></script>
+  <script src="ai.js"></script>
 
-    <script src="ball.js"></script>
+  <script src="ptp.js"></script>
 
-    <script src="rules.js"></script>
+  <script src="ball.js"></script>
 
-    <script src="movement_decision.js"></script>
-    <script id="game-screen" src="main.js"></script>
+  <script src="rules.js"></script>
 
-    <br><a href="index.html"><p class="back">BACK TO Menu</p></a>
+  <script src="movement_decision.js"></script>
+  <script id="game-screen" src="main.js"></script>
 
-  </body>
+  <br><a href="index.html">
+    <p class="back">BACK TO Menu</p>
+  </a>
+
+</body>
+
 </html>
-
